add cross validation

--- a/Final Project - 1.ipynb
+++ b/Final Project - 1.ipynb
@@ -373,27 +373,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "e1ddfdd4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['4', '2', '3', '1', '5', '6', ' ', '0', nan], dtype=object)"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset.comfort.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 112,
    "id": "370a3c55",
    "metadata": {},
@@ -1153,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "7c33936e",
+   "id": "2f476a6c",
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "2c929472",
+   "id": "8961290d",
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "bbba214b",
+   "id": "412047d2",
    "metadata": {},
    "outputs": [
     {
@@ -1458,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 198,
    "id": "b9ba9b8a",
    "metadata": {},
    "outputs": [],
@@ -1475,8 +1454,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "544de313",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# d1 = data[data[\"comfortLevel\"]==\"cool\"].sample(500, random_state=1)\n",
+    "# d2 = data[data[\"comfortLevel\"]==\"comfort\"].sample(500, random_state=1)\n",
+    "# d3 = data[data[\"comfortLevel\"]==\"warm\"]\n",
+    "# data = pd.concat([d1,d2,d3])\n",
+    "# data.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "eba94c8c",
+   "id": "3f333752",
    "metadata": {},
    "source": [
     "###### Scaling Data"
@@ -1484,8 +1477,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
-   "id": "9686a611",
+   "execution_count": 200,
+   "id": "86f33f98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1498,7 +1491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d80f3ca",
+   "id": "13d34dac",
    "metadata": {},
    "source": [
     "###### Splitting Data"
@@ -1506,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 201,
    "id": "2799db34",
    "metadata": {},
    "outputs": [],
@@ -1516,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 202,
    "id": "ab8bc119",
    "metadata": {},
    "outputs": [
@@ -1524,8 +1517,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2085, 6) (522, 6)\n",
-      "(2085,) (522,)\n"
+      "(1093, 6) (274, 6)\n",
+      "(1093,) (274,)\n"
      ]
     }
    ],
@@ -1536,40 +1529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ecdbfa5",
-   "metadata": {},
-   "source": [
-    "###### SVM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
-   "id": "78b9ea4b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6302681992337165"
-      ]
-     },
-     "execution_count": 175,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model = SVC()\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "y_pred = model.predict(X_test)\n",
-    "accuracy_score(y_pred, y_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de4cfa87",
+   "id": "2f757f7a",
    "metadata": {},
    "source": [
     "###### Models Accuracy"
@@ -1577,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 203,
    "id": "8a851985",
    "metadata": {},
    "outputs": [
@@ -1610,27 +1570,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>LogReg</td>\n",
-       "      <td>0.622605</td>\n",
+       "      <td>0.591241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>KNN</td>\n",
-       "      <td>0.620690</td>\n",
+       "      <td>0.565693</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>SVM</td>\n",
-       "      <td>0.630268</td>\n",
+       "      <td>0.580292</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>0.634100</td>\n",
+       "      <td>0.620438</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.584291</td>\n",
+       "      <td>0.558394</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1638,14 +1598,14 @@
       ],
       "text/plain": [
        "           Model  Accuracy\n",
-       "0         LogReg  0.622605\n",
-       "1            KNN  0.620690\n",
-       "2            SVM  0.630268\n",
-       "3  Random Forest  0.634100\n",
-       "4  Decision Tree  0.584291"
+       "0         LogReg  0.591241\n",
+       "1            KNN  0.565693\n",
+       "2            SVM  0.580292\n",
+       "3  Random Forest  0.620438\n",
+       "4  Decision Tree  0.558394"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1666,7 +1626,129 @@
     "    \n",
     "    modelsAccuracy = modelsAccuracy.append({'Model': name, 'Accuracy': accuracy}, ignore_index=True)\n",
     "    \n",
+    "    \n",
     "modelsAccuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e517aff1",
+   "metadata": {},
+   "source": [
+    "# Cross Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "8ffc86b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score, KFold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "id": "4cdaad9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogReg : [0.58394161 0.6350365  0.70072993 0.7080292  0.69343066 0.67153285\n",
+      " 0.40145985 0.44852941 0.44852941 0.38970588]\n",
+      "KNN : [0.51094891 0.55474453 0.66423358 0.59124088 0.64963504 0.56934307\n",
+      " 0.42335766 0.44117647 0.51470588 0.41911765]\n",
+      "SVM : [0.53284672 0.65693431 0.7080292  0.72262774 0.70072993 0.65693431\n",
+      " 0.40875912 0.45588235 0.41176471 0.41911765]\n",
+      "Random Forest : [0.52554745 0.5620438  0.67153285 0.62043796 0.56934307 0.44525547\n",
+      " 0.41605839 0.44117647 0.47058824 0.42647059]\n",
+      "Decision Tree : [0.48905109 0.44525547 0.48905109 0.48175182 0.46715328 0.4379562\n",
+      " 0.38686131 0.42647059 0.44117647 0.42647059]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Cross Val Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LogReg</td>\n",
+       "      <td>0.568093</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KNN</td>\n",
+       "      <td>0.533850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SVM</td>\n",
+       "      <td>0.567363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Random Forest</td>\n",
+       "      <td>0.514845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Decision Tree</td>\n",
+       "      <td>0.449120</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Model  Cross Val Score\n",
+       "0         LogReg         0.568093\n",
+       "1            KNN         0.533850\n",
+       "2            SVM         0.567363\n",
+       "3  Random Forest         0.514845\n",
+       "4  Decision Tree         0.449120"
+      ]
+     },
+     "execution_count": 216,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scoreCV = pd.DataFrame(columns=['Model', 'Cross Val Score'])\n",
+    "\n",
+    "for name, model in models:\n",
+    "    score = cross_val_score(model, X, y, cv=10, scoring='accuracy')\n",
+    "    print(f'{name} : {score}')\n",
+    "    \n",
+    "    scoreCV = scoreCV.append({'Model':name, 'Cross Val Score':score.mean()}, ignore_index=True)\n",
+    "\n",
+    "scoreCV"
    ]
   }
  ],
